--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Frontend</title>
+</head>
+<body>
+  <h1>Frontend</h1>
+  <div id="data"></div>
+  <script>
+    fetch('/api/data')
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('data').innerText = data.message;
+      });
+  </script>
+</body>
+</html>
 
